<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:id="@+id/etAccount"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:id="@+id/etPassword"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="#0FCCCC"
                    android:id="@+id/btnLogin" />

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:background="#0FCCCC"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/btnRegisterNow" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>