<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:id="@+id/linearLayout">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:hint="@string/enter_event_title"
                    android:textColorHint="#E0E0E0"
                    android:id="@+id/et_title"
                    android:inputType="text" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:hint="@string/enter_event_info"
                    android:textColorHint="#E0E0E0"
                    android:maxLines="4"
                    android:inputType="textMultiLine"
                    android:id="@+id/et_info" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="#FFFFFF">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/sign_up_ddl" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_ddl"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />

                <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_next"
                        android:id="@+id/btn_set_ddl" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_time" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/time" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_add"
                        android:id="@+id/btn_add_time" />
            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_times">

            </ListView>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_location" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/location" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <ImageButton
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ic_add"
                        android:id="@+id/btn_add_location" />
            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_locations">

            </ListView>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_friends" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/friend" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_add"
                        android:id="@+id/btn_add_member" />
            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_members">

            </ListView>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>