<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:id="@+id/linearLayout">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textStyle="bold"
                android:textSize="25sp"
                android:ellipsize="none"
                android:singleLine="true"
                android:id="@+id/tv_title" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:textSize="20sp"
                android:ellipsize="none"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:id="@+id/tv_info" />
    </LinearLayout>


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="#FFFFFF">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/sign_up_ddl" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_ddl"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_time" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/please_select_suitable_time" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_times">

            </ListView>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_location" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/please_select_suitable_location" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_locations">

            </ListView>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_friends" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/invited_members" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

            </LinearLayout>

            <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#F0F0F0"
                    android:id="@+id/lv_members">

            </ListView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>